[package]
name = "len-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
async-openai = "0.10.0"
async-trait = "0.1.67"
serenity = { version = "0.11.5", default-features = false, features = [
    "rustls_backend",
    "builder",
    "cache",
    "chrono",
    "client",
    # "framework",
    "gateway",
    "model",
    "http",
    # "standard_framework",
    "utils",
] }
tokio = { version = "1.26.0", features = [
    "macros",
    "rt-multi-thread",
    "tracing",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = [
    "env-filter",
] }
tracing-tree = "0.2.2"
